Ensure MRMediaRemoteSetCanBeNowPlayingApplication is called at least once when we start playing something. https://bugs.webkit.org/show_bug.cgi?id=222405

Patch by Jean-Yves Avenard <jya@apple.com> on 2021-02-25
Reviewed by Eric Carlson.

Manually tested for NowPlaying functionality.

* platform/NowPlayingManager.cpp:
(WebCore::NowPlayingManager::setNowPlayingInfo):
MediaSessionManagerCocoa::setNowPlayingInfo would have always been called
with false (setAsNowPlayingApplication) when the GPU process was in use.
It needed to be called at least once.
MRMediaRemoteSetCanBeNowPlayingApplication is fairly CPU intensive, so we
ensure we only call it if no content had been played before.

Canonical link: https://commits.webkit.org/234597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273523 268f45cc-cd09-0410-ab3c-d52691b4dbfc